syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/armanbektassov/go_auth/pkg/access/v1/;access_v1";

service AccessV1 {
  rpc Check(CheckRequest) returns (google.protobuf.Empty);
}

message CheckRequest {
  string endpoint_address = 1;
}
